--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,21 @@
     "# Custom functions and classes\n",
     "from pymoo_optimizer import PymooOptimizer\n",
     "import benchmark as Benchmark\n",
-    "import data_provider as ds"
+    "import data_provider as dp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, x_val, y_train, y_test, y_val = ds.get_train_test_validation_data('breast', 0.8, 0.1)\n"
+    "x_train, x_test, x_val, y_train, y_test, y_val = dp.get_train_test_validation_data('breast', 0.8, 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After optimization, decision tree accuracy changed from 89.47% to 96.49%\n",
+      "After optimization, decision tree accuracy changed from 85.96% to 91.23%\n",
       "\n",
-      "Optimal contains 60.0% less columns than the original dataset,reducing from 30 to 12\n",
+      "Optimal contains 53.3% less columns than the original dataset,reducing from 30 to 14\n",
       "\n",
-      "Selected columns are: texture1, perimeter1, smoothness1, compactness1, radius2, perimeter2, area2, compactness2, symmetry2, area3, symmetry3, fractal_dimension3\n"
+      "Selected columns are: texture1, area1, smoothness1, concave_points1, texture2, perimeter2, area2, compactness2, fractal_dimension2, perimeter3, area3, concavity3, concave_points3, symmetry3\n"
      ]
     }
    ],
