PoC generating features set

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After optimization, decision tree accuracy changed from 91.23% to 93.86%\n",
+      "After optimization, decision tree accuracy changed from 88.95% to 89.3%\n",
       "\n",
-      "Optimal contains 60.0% less columns than the original dataset,reducing from 30 to 12\n",
+      "Optimal contains 83.3% less columns than the original dataset,reducing from 30 to 5\n",
       "\n",
-      "Selected columns are: texture1, perimeter1, smoothness1, concave_points1, texture2, perimeter2, area2, smoothness2, concavity2, radius3, perimeter3, concave_points3\n"
+      "Selected columns are: texture1, concavity1, concave_points1, concavity2, compactness3\n"
      ]
     }
    ],
@@ -74,72 +74,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculates multiple solutions, returning the best one and the average score\n",
+    "# If the average score is worse than previous, it means that there probably was no true optimization\n",
+    "def get_average_heuristics(optimizer, heuristics, tries = 1):\n",
+    "    scores = []\n",
+    "    solutions = []\n",
+    "    for _ in range(tries):\n",
+    "        solution, score = optimizer.optimize(64, 50, heuristics, verbose = False)\n",
+    "        solutions.append(solution)\n",
+    "        scores.append(score)\n",
+    "    return solutions[scores.index(np.max(score))], np.mean(scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gen\tnevals\tavg     \tstd      \tmin     \tmax     \n",
-      "0  \t50    \t0.885464\t0.0237514\t0.842105\t0.937343\n",
-      "1  \t30    \t0.894386\t0.0231121\t0.842105\t0.937343\n",
-      "2  \t34    \t0.895439\t0.0209692\t0.857143\t0.929825\n",
-      "3  \t35    \t0.896441\t0.0192604\t0.859649\t0.929825\n",
-      "4  \t30    \t0.896742\t0.0238029\t0.857143\t0.947368\n",
-      "5  \t37    \t0.89584 \t0.0217982\t0.842105\t0.947368\n",
-      "6  \t30    \t0.898847\t0.020556 \t0.842105\t0.929825\n",
-      "7  \t29    \t0.903008\t0.0227519\t0.842105\t0.944862\n",
-      "8  \t31    \t0.903409\t0.0268543\t0.842105\t0.944862\n",
-      "9  \t19    \t0.909875\t0.0254702\t0.842105\t0.944862\n",
-      "10 \t36    \t0.905965\t0.0284093\t0.842105\t0.944862\n",
-      "11 \t34    \t0.915088\t0.0242611\t0.842105\t0.9599  \n",
-      "12 \t31    \t0.918847\t0.0269881\t0.857143\t0.9599  \n",
-      "13 \t28    \t0.919298\t0.0272065\t0.842105\t0.9599  \n",
-      "14 \t34    \t0.91604 \t0.0302054\t0.857143\t0.9599  \n",
-      "15 \t30    \t0.917544\t0.0295452\t0.849624\t0.957393\n",
-      "16 \t30    \t0.925113\t0.0244468\t0.842105\t0.9599  \n",
-      "17 \t35    \t0.922206\t0.0291157\t0.857143\t0.962406\n",
-      "18 \t26    \t0.933283\t0.0244069\t0.857143\t0.962406\n",
-      "19 \t24    \t0.938747\t0.0250283\t0.859649\t0.962406\n",
-      "20 \t36    \t0.928922\t0.0352619\t0.842105\t0.962406\n",
-      "21 \t25    \t0.934486\t0.0329686\t0.842105\t0.962406\n",
-      "22 \t28    \t0.932632\t0.0356477\t0.842105\t0.962406\n",
-      "23 \t26    \t0.938095\t0.0284624\t0.857143\t0.962406\n",
-      "24 \t32    \t0.937644\t0.0307348\t0.859649\t0.962406\n",
-      "25 \t27    \t0.943058\t0.0280031\t0.842105\t0.962406\n",
-      "26 \t37    \t0.936792\t0.0312763\t0.859649\t0.962406\n",
-      "27 \t25    \t0.939599\t0.0325323\t0.842105\t0.962406\n",
-      "28 \t33    \t0.939148\t0.0301088\t0.859649\t0.962406\n",
-      "29 \t33    \t0.942055\t0.0290322\t0.842105\t0.962406\n",
-      "30 \t34    \t0.936541\t0.0241146\t0.862155\t0.962406\n",
-      "31 \t36    \t0.92782 \t0.0349334\t0.842105\t0.967419\n",
-      "32 \t25    \t0.93188 \t0.0293637\t0.857143\t0.962406\n",
-      "33 \t28    \t0.933333\t0.0314594\t0.842105\t0.962406\n",
-      "34 \t25    \t0.940401\t0.0289917\t0.862155\t0.962406\n",
-      "35 \t36    \t0.928271\t0.0376871\t0.842105\t0.962406\n",
-      "36 \t25    \t0.939148\t0.0265477\t0.859649\t0.962406\n",
-      "37 \t35    \t0.941504\t0.0257285\t0.864662\t0.962406\n",
-      "38 \t33    \t0.933935\t0.0304726\t0.859649\t0.962406\n",
-      "39 \t29    \t0.933183\t0.0341978\t0.859649\t0.962406\n",
-      "40 \t30    \t0.938496\t0.029702 \t0.859649\t0.962406\n",
-      "41 \t29    \t0.937143\t0.0317489\t0.859649\t0.962406\n",
-      "42 \t28    \t0.946717\t0.0220882\t0.859649\t0.962406\n",
-      "43 \t21    \t0.949223\t0.0268009\t0.842105\t0.962406\n",
-      "44 \t33    \t0.938997\t0.0283224\t0.859649\t0.962406\n",
-      "45 \t26    \t0.948221\t0.0250356\t0.842105\t0.962406\n",
-      "46 \t28    \t0.940652\t0.0321054\t0.842105\t0.962406\n",
-      "47 \t31    \t0.93995 \t0.02858  \t0.859649\t0.962406\n",
-      "48 \t30    \t0.941855\t0.0285538\t0.842105\t0.962406\n",
-      "49 \t24    \t0.941454\t0.0315541\t0.857143\t0.962406\n",
-      "50 \t29    \t0.947419\t0.0237791\t0.879699\t0.962406\n",
-      "After feature creation, decision tree accuracy set to 92.98%\n",
+      "gen\tnevals\tavg     \tstd       \tmin     \tmax     \n",
+      "0  \t50    \t0.883699\t0.00336996\t0.876692\t0.890226\n",
+      "1  \t31    \t0.884291\t0.00353212\t0.876692\t0.892481\n",
+      "2  \t37    \t0.884361\t0.00413283\t0.876692\t0.896491\n",
+      "3  \t27    \t0.886586\t0.00398748\t0.876692\t0.896491\n",
+      "4  \t29    \t0.88594 \t0.00514884\t0.874436\t0.896491\n",
+      "5  \t33    \t0.887398\t0.00683729\t0.878947\t0.920551\n",
+      "6  \t35    \t0.886932\t0.00795525\t0.876692\t0.920551\n",
+      "7  \t33    \t0.88783 \t0.00745422\t0.878947\t0.905764\n",
+      "8  \t28    \t0.891454\t0.00925382\t0.878947\t0.92005 \n",
+      "9  \t34    \t0.891494\t0.00995393\t0.878947\t0.92005 \n",
+      "10 \t34    \t0.891353\t0.0104901 \t0.876692\t0.92005 \n",
+      "11 \t29    \t0.892466\t0.0126996 \t0.878947\t0.92005 \n",
+      "12 \t30    \t0.895479\t0.0141236 \t0.874436\t0.92406 \n",
+      "13 \t27    \t0.901935\t0.0135275 \t0.878947\t0.92406 \n",
+      "14 \t32    \t0.897454\t0.0139553 \t0.876692\t0.92406 \n",
+      "15 \t31    \t0.897554\t0.0131554 \t0.878446\t0.92406 \n",
+      "16 \t25    \t0.898972\t0.0138097 \t0.876692\t0.92005 \n",
+      "17 \t31    \t0.897253\t0.0139073 \t0.878947\t0.92005 \n",
+      "18 \t37    \t0.896762\t0.0144168 \t0.874436\t0.92005 \n",
+      "19 \t31    \t0.895754\t0.014456  \t0.874436\t0.92005 \n",
+      "20 \t33    \t0.896366\t0.0145187 \t0.874436\t0.92005 \n",
+      "21 \t29    \t0.900065\t0.0135863 \t0.876692\t0.922807\n",
+      "22 \t32    \t0.897404\t0.0145901 \t0.876692\t0.922807\n",
+      "23 \t31    \t0.895719\t0.0143911 \t0.876692\t0.922807\n",
+      "24 \t28    \t0.90014 \t0.0139435 \t0.876692\t0.92406 \n",
+      "25 \t26    \t0.900892\t0.0138556 \t0.874436\t0.92406 \n",
+      "26 \t27    \t0.900511\t0.0144879 \t0.874436\t0.92406 \n",
+      "27 \t24    \t0.901293\t0.0143263 \t0.878947\t0.92406 \n",
+      "28 \t38    \t0.897449\t0.0151587 \t0.876692\t0.924561\n",
+      "29 \t21    \t0.904005\t0.0155879 \t0.878947\t0.924561\n",
+      "30 \t21    \t0.906201\t0.0148678 \t0.880451\t0.924561\n",
+      "31 \t29    \t0.904556\t0.0163614 \t0.878947\t0.924561\n",
+      "32 \t33    \t0.903093\t0.0152675 \t0.87594 \t0.924561\n",
+      "33 \t35    \t0.899634\t0.0154344 \t0.878947\t0.924561\n",
+      "34 \t30    \t0.902942\t0.0145748 \t0.876692\t0.924561\n",
+      "35 \t31    \t0.902045\t0.0145327 \t0.881203\t0.924561\n",
+      "36 \t35    \t0.904201\t0.0139405 \t0.878947\t0.924561\n",
+      "37 \t25    \t0.907248\t0.0133634 \t0.875689\t0.934586\n",
+      "38 \t27    \t0.905779\t0.0153388 \t0.876692\t0.934586\n",
+      "39 \t21    \t0.909308\t0.0152431 \t0.878947\t0.934586\n",
+      "40 \t25    \t0.909614\t0.016039  \t0.881203\t0.934586\n",
+      "41 \t39    \t0.901023\t0.0157579 \t0.878947\t0.934586\n",
+      "42 \t26    \t0.906476\t0.0160076 \t0.881203\t0.934586\n",
+      "43 \t26    \t0.907569\t0.0174249 \t0.878947\t0.934586\n",
+      "44 \t29    \t0.903273\t0.018467  \t0.878947\t0.934586\n",
+      "45 \t36    \t0.902246\t0.016349  \t0.874185\t0.934586\n",
+      "46 \t32    \t0.903449\t0.015141  \t0.874436\t0.934586\n",
+      "47 \t22    \t0.90591 \t0.0167377 \t0.876692\t0.934586\n",
+      "48 \t31    \t0.90409 \t0.0169884 \t0.878947\t0.934586\n",
+      "49 \t31    \t0.906922\t0.0146405 \t0.883459\t0.934586\n",
+      "50 \t34    \t0.901223\t0.0175313 \t0.876692\t0.934586\n",
+      "After feature creation, decision tree accuracy set to 89.47%\n",
       "\n",
-      "After feature creation and selection, decision tree accuracy set to 95.61%\n",
+      "After feature creation and selection, decision tree accuracy set to 89.47%\n",
       "\n",
-      "Optimal contains 61.3% less columns than the original dataset,reducing from 31 to 12\n",
+      "Optimal contains 48.4% less columns than the original dataset,reducing from 31 to 16\n",
       "\n",
-      "Selected columns are: texture1, smoothness1, concavity1, concave_points1, texture2, perimeter2, concavity2, concave_points2, texture3, concave_points3, symmetry3, evolved_feature\n"
+      "Selected columns are: smoothness1, compactness1, concave_points1, symmetry1, perimeter2, smoothness2, concavity2, concave_points2, fractal_dimension2, texture3, smoothness3, compactness3, concave_points3, symmetry3, fractal_dimension3, evolved_feature\n"
      ]
     }
    ],
@@ -165,11 +183,69 @@
     "        f'Optimal contains {np.round((x_train.shape[1] - np.sum(solution)) / x_train.shape[1] * 100, 1)}% less columns than the original dataset,' +\n",
     "        f'reducing from {x_train.shape[1]} to {np.sum(solution)}\\n\\nSelected columns are: {\", \".join(x_train.columns[solution].tolist())}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.drop(columns=[\"evolved_feature\"], inplace=True)\n",
+    "x_test.drop(columns=[\"evolved_feature\"], inplace=True)\n",
+    "x_val.drop(columns=[\"evolved_feature\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94.74 1\n",
+      "94.74 94.74\n",
+      "After feature creation, decision tree accuracy was equal to 94.74%\n",
+      "\n",
+      "With previous data, it was 89.12%\n",
+      "\n",
+      "Optimal contains 93.3% less columns than the original dataset,\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evolve a new set of features\n",
+    "x_train_2 = pd.DataFrame({})\n",
+    "x_test_2 = pd.DataFrame({})\n",
+    "x_val_2 = pd.DataFrame({})\n",
+    "\n",
+    "old_accuracy = 0\n",
+    "new_accuracy = 1\n",
+    "feature_count = 0\n",
+    "\n",
+    "while new_accuracy - old_accuracy > 0:\n",
+    "    old_accuracy = new_accuracy\n",
+    "    feature_count += 1\n",
+    "    optimizer = PymooOptimizer(pd.concat([x_train, x_train_2], axis=1), pd.concat([x_val, x_val_2], axis=1), y_train, y_val)\n",
+    "    best_feature_func = optimizer.evolve_new_feature(epochs=50, heuristics=Benchmark.dtree_accuracy, verbose=False, target_train = x_train_2, target_test = x_val_2)\n",
+    "\n",
+    "    x_train_2[f'evolved_feature_{feature_count}'] = pd.concat([x_train, x_train_2], axis=1).apply(lambda row: best_feature_func(*row), axis=1)\n",
+    "    x_test_2[f'evolved_feature_{feature_count}'] = pd.concat([x_test, x_test_2], axis=1).apply(lambda row: best_feature_func(*row), axis=1)\n",
+    "    x_val_2[f'evolved_feature_{feature_count}'] = pd.concat([x_val, x_val_2], axis=1).apply(lambda row: best_feature_func(*row), axis=1)\n",
+    "    \n",
+    "    new_accuracy = np.round(Benchmark.dtree_accuracy(x_train_2, x_test_2, y_train, y_test) * 100, 2)\n",
+    "\n",
+    "score = np.round(Benchmark.dtree_accuracy(x_train, x_test, y_train, y_test) * 100, 2)\n",
+    "print(f'After feature creation, decision tree accuracy was equal to {new_accuracy}%\\n\\n' +\n",
+    "        f'With previous data, it was {score}%\\n\\n' +\n",
+    "        f'Optimal contains {100 - np.round(x_train_2.shape[1] / x_train.shape[1] * 100, 1)}% less columns than the original dataset,')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
